move files to their own folders

--- a/src/ts/tsconfig.json
+++ b/src/ts/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "target": "ES2022",
-        "outFile": "../dist/script.js",
+        "outFile": "../../dist/script.js",
         "sourceMap": true
     }
 }
